--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.1",
     "react-native-animatable": "^1.2.4",
+    "react-native-camera": "^1.1.2",
+    "react-native-collapsible": "^0.11.2",
     "react-native-elements": "^0.19.1",
+    "react-native-image-crop-picker": "^0.20.1",
     "react-native-swiper": "^1.5.13",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
