--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-image-crop-picker": "^0.20.1",
     "react-native-is-iphonex": "^1.0.1",
     "react-native-swiper": "^1.5.13",
-    "react-navigation": "^1.5.11",
+    "react-native-switch-toggle": "^1.0.5",
+    "react-navigation": "^2.0.4",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
