--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
-    "sdkVersion": "27.0.0"
+    "name": "bukka",
+    "slug": "bukkad",
+    "sdkVersion": "27.0.0",
+    "privacy": "unlisted"
   }
 }
