--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "react-native": "0.55.1",
     "react-native-animatable": "^1.2.4",
     "react-native-camera": "^1.1.2",
+    "react-native-chart": "^1.0.8-beta",
     "react-native-elements": "^0.19.1",
     "react-native-image-crop-picker": "^0.20.1",
     "react-native-is-iphonex": "^1.0.1",
+    "react-native-maps-directions": "^1.6.0",
+    "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.13",
     "react-native-switch-toggle": "^1.0.5",
     "react-navigation": "^2.0.4",
